# WindGym-Zoo

./: README.md  pyproject.toml
configs/: 2_turbines_most_sensors.yaml  N_turbines_most_sensors.yaml
scripts/: eval_leaderboard.py  generate_config.py
templates/: train_protagonist.py
